--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 <body><!--显式元素-->
     <h1>Mozilla 酷毙了！</h1>
-    <img id="qqqqqqqq" src="imags/firefox-icon.png" alt="Firefox 标志：一只盘旋在地球上的火狐">
+    <img id="my-Img" src="imags/firefox-icon.png" alt="Firefox 标志：一只盘旋在地球上的火狐">
     <p>Mozilla 是一个全球社区，这里聚集着来自五湖四海的</p>
     <ul><!--无序列表-->
         <li>技术人员</li>
